force-app/main/default/objects/Loan__c/fields/Annual_Loan__c.field-meta.xml
<CustomField>
    <fullName>Annual_Loan__c</fullName>
    <label>Annual Loan:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>