force-app/main/default/objects/Loan__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <formula>(Loan_Repayment__c* (((1+( Interest_Rate__c/52))^ Term__c) -1))/(( 
Interest_Rate__c/52)*((1+( Interest_Rate__c/52))^ Term__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>