force-app/main/default/objects/Loan__c/fields/Loan_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment__c</fullName>
    <label>Loan Repayment:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>