force-app/main/default/objects/Loan__c/fields/Property_name__c.field-meta.xml
<CustomField>
    <fullName>Property_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property name:</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>