force-app/main/default/objects/Loan__c/fields/Total_Loan_Installments__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Installments__c</fullName>
    <label>Total Loan Installments:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>